2017-11-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define genericListener.listeners.addFrameId function.
	Modify getSpecifiedFrameId funciton.
	Modify collectPopupState function.
	Modify genericListener.listeners.restorePopupState function.

	* tryXpath/popup/popup.html (Main): 
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.js:
	Rename frameidExpression -> frameIdExpression
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.html (Main):
	Add a select element.

	* tryXpath/popup/popup.js:
	Define getSpecifiedFrameId function.
	Define invalidTabId, invalidExecutionId constans.
	Define showError function.

2017-11-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.html (Main):
	Remove some elements related frame-expression.
	Add some elements related frameid-expression.

	* tryXpath/popup/popup.js:
	Remove execScript function.
	Define execContentScript function.

	* tryXpath/scripts/try_xpath_functions.js:
	Modify codes about namespaces.

	* tryXpath/scripts/try_xpath_check_frame.js:
	Create this file.

	* tryXpath/manifest.json:
	Empty content_scripts.

	* tryXpath/scripts/try_xpath_content.js:
	Prevent multiple execution.

	* tryXpath/scripts/try_xpath_functions.js:
	Prevent multiple execution.

2017-11-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define execScript function.
	Modify sendToActiveTab function.


	* tryXpath/manifest.json: 
	Change "content_scripts".

	* tryXpath/scripts/try_xpath_manage_content.js:
	Create this file.
	Define state variable.
	Define genericListener.listeners.loadContentState function.
	Define genericListener.listeners.finishScriptExecuteAll function.

2017-11-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define createDetailRow function.

	* tryXpath/background/try_xpath_background.js:
	Modify loadDefaultCss function.

	* tryXpath/pages/options.js: