@@ -95,6 +95,7 @@
   <h1>Results</h1>
   <div>Message: <span id="results-message"></span></div>
   <div>Count: <span id="results-count"></span></div>
+  <div>frameId: <span id="results-frame-id"></span></div>
   <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
   <h2>Context detail</h2>
   <table id="context-detail">
